Round 1 of pr feedback